--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ matplotlib==3.8.3
 seaborn==0.13.2
 scikit-learn==1.4.1.post1
 tensorflow==2.17.0
-pydub==0.25.1
+pydub
 streamlit
 ffmpeg
 # ffprobe
